# commitmanager

./: CMakeLists.txt  CommitManagerConfig.cmake.in  Readme.md
client/: CMakeLists.txt  ClientSocket.cpp  SnapshotDescriptor.cpp
commitmanager/: ClientSocket.hpp  CommitManager.hpp  Descriptor.hpp  ErrorCode.hpp  MessageTypes.hpp  SnapshotDescriptor.hpp
common/: CMakeLists.txt  CommitManager.cpp  Descriptor.cpp  MessageTypes.cpp  SnapshotDescriptor.cpp
server/: CMakeLists.txt  Descriptor.cpp  Descriptor.hpp  ServerConfig.hpp  ServerSocket.cpp  ServerSocket.hpp  main.cpp
test/: CMakeLists.txt  TestClient.cpp
